--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
     <title>Plan metro Sankt-Peterburga</title>
 
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
-    <link rel="stylesheet" href="/css/style.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
     <script type='text/javascript' src="//wurfl.io/wurfl.js"></script>
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js" defer></script>
     <!--<script src="https://rawgit.com/fstoerkle/leaflet-custom-paths/master/src/leaflet.custompaths.js" defer></script>-->
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <script src="/js/script.js" defer></script>
+    <script src="js/script.js" defer></script>
 
 </head>
 <body>
