sync-test initial commit

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <script type='text/javascript' src="//wurfl.io/wurfl.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js" defer></script>
     <!--<script src="https://rawgit.com/fstoerkle/leaflet-custom-paths/master/src/leaflet.custompaths.js" defer></script>-->
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <!--<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>-->
+    <!--<script src="https://cdn.rawgit.com/teralytics/Leaflet.D3SvgOverlay/master/L.D3SvgOverlay.min.js" defer></script>-->
     <script src="js/script.js" defer></script>
 
 </head>
