--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Plan metro Sankt-Peterburga</title>
-
+    <link rel="stylesheet" href="uniform.default.css" media="screen" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css"/>
     <link rel="stylesheet" href="css/style.css"/>
     <script type='text/javascript' src="//wurfl.io/wurfl.js"></script>
@@ -11,6 +11,11 @@
     <!--<script src="https://rawgit.com/fstoerkle/leaflet-custom-paths/master/src/leaflet.custompaths.js" defer></script>-->
     <!--<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>-->
     <!--<script src="https://cdn.rawgit.com/teralytics/Leaflet.D3SvgOverlay/master/L.D3SvgOverlay.min.js" defer></script>-->
+
+    <script src="https://cdn.rawgit.com/chriscalip/L.UniformControl/master/lib/uniform/jquery.uniform.min.js" defer></script>
+    <script src="https://cdn.rawgit.com/chriscalip/L.UniformControl/master/src/UniformControl.js" defer></script>
+
+
     <script src="js/script.js" defer></script>
 
 </head>
