--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>-->
     <!--<script src="https://cdn.rawgit.com/teralytics/Leaflet.D3SvgOverlay/master/L.D3SvgOverlay.min.js" defer></script>-->
 
-    <!--<script src="https://cdn.rawgit.com/chriscalip/L.UniformControl/master/lib/uniform/jquery.uniform.min.js" defer></script>-->
+    <script src="https://cdn.rawgit.com/chriscalip/L.UniformControl/master/lib/uniform/jquery.uniform.js" defer></script>
     <script src="https://cdn.rawgit.com/chriscalip/L.UniformControl/master/src/UniformControl.js" defer></script>
 
 
