--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Plan metro Sankt-Peterburga</title>
     <link rel="stylesheet" href="https://cdn.rawgit.com/chriscalip/L.UniformControl/master/lib/uniform/themes/default/css/uniform.default.min.css" media="screen" />
+
+    <link rel="stylesheet" href="http://makinacorpus.github.io/Leaflet.MeasureControl/Leaflet.draw/dist/leaflet.draw.css" />
+    <link rel="stylesheet" href="http://makinacorpus.github.io/Leaflet.MeasureControl/leaflet.measurecontrol.css" />
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css"/>
     <link rel="stylesheet" href="css/style.css"/>
     <script type='text/javascript' src="//wurfl.io/wurfl.js"></script>
