--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <script src="https://cdn.rawgit.com/chriscalip/L.UniformControl/master/lib/uniform/jquery.uniform.js" defer></script>
     <script src="https://cdn.rawgit.com/chriscalip/L.UniformControl/master/src/UniformControl.js" defer></script>
 
-    <script src="http://makinacorpus.github.io/Leaflet.MeasureControl/Leaflet.draw/dist/leaflet.draw.js" defer></script>
-    <script src="http://makinacorpus.github.io/Leaflet.MeasureControl/leaflet.measurecontrol.js" defer></script>
+    <!--<script src="http://makinacorpus.github.io/Leaflet.MeasureControl/Leaflet.draw/dist/leaflet.draw.js" defer></script>-->
+    <!--<script src="http://makinacorpus.github.io/Leaflet.MeasureControl/leaflet.measurecontrol.js" defer></script>-->
 
     <script src="js/script.js" defer></script>
 
