--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdn.rawgit.com/chriscalip/L.UniformControl/master/lib/uniform/themes/default/css/uniform.default.min.css" media="screen" />
 
     <link rel="stylesheet" href="http://makinacorpus.github.io/Leaflet.MeasureControl/Leaflet.draw/dist/leaflet.draw.css" />
-    <link rel="stylesheet" href="http://makinacorpus.github.io/Leaflet.MeasureControl/leaflet.measurecontrol.css" />
+    <!--<link rel="stylesheet" href="http://makinacorpus.github.io/Leaflet.MeasureControl/leaflet.measurecontrol.css" />-->
     <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/Spb_metro_logo.svg/293px-Spb_metro_logo.svg.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css"/>
     <link rel="stylesheet" href="css/style.css"/>
