--- a/index.html
+++ b/index.html
@@ -3,13 +3,26 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Plan metro Sankt-Peterburga</title>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/chriscalip/L.UniformControl/master/lib/uniform/themes/default/css/uniform.default.min.css" media="screen" />
 
+    <link rel="stylesheet" href="http://makinacorpus.github.io/Leaflet.MeasureControl/Leaflet.draw/dist/leaflet.draw.css" />
+    <!--<link rel="stylesheet" href="http://makinacorpus.github.io/Leaflet.MeasureControl/leaflet.measurecontrol.css" />-->
+    <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/Spb_metro_logo.svg/293px-Spb_metro_logo.svg.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css"/>
     <link rel="stylesheet" href="css/style.css"/>
     <script type='text/javascript' src="//wurfl.io/wurfl.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js" defer></script>
     <!--<script src="https://rawgit.com/fstoerkle/leaflet-custom-paths/master/src/leaflet.custompaths.js" defer></script>-->
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <!--<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>-->
+    <!--<script src="https://cdn.rawgit.com/teralytics/Leaflet.D3SvgOverlay/master/L.D3SvgOverlay.min.js" defer></script>-->
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" defer></script>
+    <script src="https://cdn.rawgit.com/chriscalip/L.UniformControl/master/lib/uniform/jquery.uniform.js" defer></script>
+    <script src="https://cdn.rawgit.com/chriscalip/L.UniformControl/master/src/UniformControl.js" defer></script>
+
+    <!--<script src="http://makinacorpus.github.io/Leaflet.MeasureControl/Leaflet.draw/dist/leaflet.draw.js" defer></script>-->
+    <!--<script src="http://makinacorpus.github.io/Leaflet.MeasureControl/leaflet.measurecontrol.js" defer></script>-->
+
     <script src="js/script.js" defer></script>
 
 </head>
