--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--<script src="https://cdn.rawgit.com/teralytics/Leaflet.D3SvgOverlay/master/L.D3SvgOverlay.min.js" defer></script>-->
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" defer></script>
-    <script src="https://cdn.rawgit.com/chriscalip/L.UniformControl/master/lib/uniform/jquery.uniform.js" defer></script>
+    <script src="https://cdn.rawgit.com/chriscalip/L.UniformControl/master/lib/uniform/jquery.uniform.min.js" defer></script>
     <script src="https://cdn.rawgit.com/chriscalip/L.UniformControl/master/src/UniformControl.js" defer></script>
 
     <!--<script src="http://makinacorpus.github.io/Leaflet.MeasureControl/Leaflet.draw/dist/leaflet.draw.js" defer></script>-->
