--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/Spb_metro_logo.svg/293px-Spb_metro_logo.svg.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css"/>
     <link rel="stylesheet" href="css/style.css"/>
-    <script type='text/javascript' src="//wurfl.io/wurfl.js"></script>
+    <script src="https://cdn.rawgit.com/github/fetch/master/fetch.js" defer></script>
+    <script type='text/javascript' src="//wurfl.io/wurfl.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js" defer></script>
     <!--<script src="https://rawgit.com/fstoerkle/leaflet-custom-paths/master/src/leaflet.custompaths.js" defer></script>-->
     <!--<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>-->
