--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="css/style.css"/>
     
     <script src="https://cdn.rawgit.com/github/fetch/master/fetch.js" defer></script>
-    <script type='text/javascript' src="//wurfl.io/wurfl.js" defer></script>
+    <script type='text/javascript' src="https://wurfl.io/wurfl.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js" defer></script>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" defer></script>
     <script src="https://cdn.rawgit.com/chriscalip/L.UniformControl/master/lib/uniform/jquery.uniform.min.js" defer></script>
     <script src="https://cdn.rawgit.com/chriscalip/L.UniformControl/master/src/UniformControl.js" defer></script>
 
