--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Plan metro Sankt-Peterburga</title>
-    
+    <link href='https://fonts.googleapis.com/css?family=Cambay:400,700' rel='stylesheet' type='text/css'>
     <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/Spb_metro_logo.svg/293px-Spb_metro_logo.svg.png" />
     <link rel="stylesheet" href="https://cdn.rawgit.com/chriscalip/L.UniformControl/master/lib/uniform/themes/default/css/uniform.default.min.css" media="screen" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css"/>
