--- a/index.html
+++ b/index.html
@@ -5,20 +5,12 @@
     <title>Plan metro Sankt-Peterburga</title>
     <!--<link href='https://fonts.googleapis.com/css?family=Cambay:400,700' rel='stylesheet' type='text/css'>-->
     <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/Spb_metro_logo.svg/293px-Spb_metro_logo.svg.png" />
-    <link rel="stylesheet" href="https://cdn.rawgit.com/chriscalip/L.UniformControl/master/lib/uniform/themes/default/css/uniform.default.min.css" media="screen" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css"/>
     <link rel="stylesheet" href="http://alertifyjs.com/build/css/alertify.css"/>
-    <!-- Default theme -->
-    <link rel="stylesheet" href="http://alertifyjs.com/build/css/themes/semantic.css"/>
+    <link rel="stylesheet" href="http://alertifyjs.com/build/css/themes/default.css"/>
     <!--<link rel="stylesheet" href="css/style.css"/>-->
-    
     <script src="https://cdn.rawgit.com/github/fetch/master/fetch.js" defer></script>
-    <script type='text/javascript' src="https://wurfl.io/wurfl.js" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet-src.js" defer></script>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" defer></script>
-    <script src="https://cdn.rawgit.com/chriscalip/L.UniformControl/master/lib/uniform/jquery.uniform.min.js" defer></script>
-    <script src="https://cdn.rawgit.com/chriscalip/L.UniformControl/master/src/UniformControl.js" defer></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet-src.js" defer></script>-->
 
     <script src="js/script.js" defer></script>
 
