--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css"/>
     <link rel="stylesheet" href="http://alertifyjs.com/build/css/alertify.css"/>
     <link rel="stylesheet" href="http://alertifyjs.com/build/css/themes/default.css"/>
+    <link rel="stylesheet" href="css/fonts.css"/>
     <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/scheme.css"/>
+    <link rel="stylesheet" href="css/contextmenu.css"/>
     
     <script src="https://cdn.rawgit.com/github/fetch/master/fetch.js" defer></script>
     <script src="js/script.js" defer></script>
