--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <!--<link href='https://fonts.googleapis.com/css?family=Cambay:400,700' rel='stylesheet' type='text/css'>-->
     <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/Spb_metro_logo.svg/293px-Spb_metro_logo.svg.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css"/>
-    <link rel="stylesheet" href="http://alertifyjs.com/build/css/alertify.css"/>
-    <link rel="stylesheet" href="http://alertifyjs.com/build/css/themes/default.css"/>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/MohammadYounes/AlertifyJS/master/build/css/alertify.min.css"/>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/MohammadYounes/AlertifyJS/master/build/css/themes/default.css"/>
     <link rel="stylesheet" href="css/fonts.css"/>
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="css/scheme.css"/>
