--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta name="keywords" content="Петербург, план, метро">
+    <meta name="description" content="План метро Санкт-Петербурга">
+    <meta name="author" content="Anton Veselyev">
     <title>Plan metro Sankt-Peterburga</title>
     <!--<link href='https://fonts.googleapis.com/css?family=Cambay:400,700' rel='stylesheet' type='text/css'>-->
     <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/Spb_metro_logo.svg/293px-Spb_metro_logo.svg.png" />
