--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="css/scheme.css"/>
     <link rel="stylesheet" href="css/contextmenu.css"/>
+    <link rel="stylesheet" href="css/textplate.css"/>
+    <link rel="stylesheet" href="css/faq.css"/>
     
     <script src="https://cdn.rawgit.com/github/fetch/master/fetch.js" defer></script>
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet-src.js" defer></script>-->
