--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="keywords" content="Петербург, план, метро">
     <meta name="description" content="План метро Санкт-Петербурга">
     <meta name="author" content="Anton Veselyev">
+    <meta name="theme-color" content="#003688">
     <title>Plan metro Sankt-Peterburga</title>
     <!--<link href='https://fonts.googleapis.com/css?family=Cambay:400,700' rel='stylesheet' type='text/css'>-->
     <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/Spb_metro_logo.svg/293px-Spb_metro_logo.svg.png" />
