--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css"/>
     <link rel="stylesheet" href="https://cdn.rawgit.com/MohammadYounes/AlertifyJS/master/build/css/alertify.min.css"/>
     <link rel="stylesheet" href="https://cdn.rawgit.com/MohammadYounes/AlertifyJS/master/build/css/themes/default.min.css"/>
-    <link rel="stylesheet" href="css/fonts.css"/>
+    <!--<link rel="stylesheet" href="css/fonts.css"/>-->
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="css/scheme.css"/>
     <link rel="stylesheet" href="css/contextmenu.css"/>
