--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     
     <script src="https://cdn.rawgit.com/github/fetch/master/fetch.js" defer></script>
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet-src.js" defer></script>-->
-
+    <!--<script>
+        window['ActiveXObject'] = 1;
+        document.documentElement.style['transition'] = '1';
+    </script>-->
     <script src="js/script.js" defer></script>
 </head>
 <body>
