--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdn.rawgit.com/MohammadYounes/AlertifyJS/master/build/css/themes/default.min.css"/>
     <!--<link rel="stylesheet" href="css/fonts.css"/>-->
     <link rel="stylesheet" href="css/style.css"/>
-    <link rel="stylesheet" href="css/scheme.css"/>
+    <link rel="stylesheet" id="scheme"/>
     <link rel="stylesheet" href="css/contextmenu.css"/>
     <link rel="stylesheet" href="css/textplate.css"/>
     <link rel="stylesheet" href="css/faq.css"/>
