--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
     <!--<link rel="stylesheet" href="css/fonts.css"/>-->
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" id="scheme"/>
-    <link rel="stylesheet" href="css/contextmenu.css"/>
-    <link rel="stylesheet" href="css/textplate.css"/>
-    <link rel="stylesheet" href="css/faq.css"/>
     
     <script src="https://cdn.rawgit.com/github/fetch/master/fetch.js" defer></script>
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet-src.js" defer></script>-->
@@ -26,7 +23,8 @@
         window['ActiveXObject'] = 1;
         document.documentElement.style['transition'] = '1';
     </script>-->
-    <script src="js/script.js" defer></script>
+    <script src="dist/vendor.js" defer></script>
+    <script src="dist/app.js" defer></script>
 </head>
 <body>
 
