--- a/index.html
+++ b/index.html
@@ -16,19 +16,10 @@
     <!--<link rel="stylesheet" href="css/fonts.css"/>-->
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" id="scheme"/>
-    
-    <script src="https://cdn.rawgit.com/github/fetch/master/fetch.js" defer></script>
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet-src.js" defer></script>-->
-    <!--<script>
-        window['ActiveXObject'] = 1;
-        document.documentElement.style['transition'] = '1';
-    </script>-->
-    <script src="dist/vendor.js" defer></script>
-    <script src="dist/app.js" defer></script>
 </head>
 <body>
 
 <div id="map-container"/>
 
-</body>
+<script type="text/javascript" src="dist/vendor.js?472c89cdc74ce765b1eb"></script><script type="text/javascript" src="dist/app.js?472c89cdc74ce765b1eb"></script></body>
 </html>
