--- a/index.html
+++ b/index.html
@@ -21,5 +21,5 @@
 
 <div id="map-container"/>
 
-<script type="text/javascript" src="dist/vendor.js?1cd2ec21e5345b9b6bde"></script><script type="text/javascript" src="dist/app.js?1cd2ec21e5345b9b6bde"></script></body>
+<script type="text/javascript" src="public/vendor.js?8a8b0a97df8aa9b9ccb1"></script><script type="text/javascript" src="public/app.js?8a8b0a97df8aa9b9ccb1"></script></body>
 </html>
