--- a/src/template.html
+++ b/src/template.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdn.rawgit.com/MohammadYounes/AlertifyJS/master/build/css/alertify.min.css"/>
     <link rel="stylesheet" href="https://cdn.rawgit.com/MohammadYounes/AlertifyJS/master/build/css/themes/default.min.css"/>
     <!--<link rel="stylesheet" href="css/fonts.css"/>-->
-    <link rel="stylesheet" href="public/style.css"/>
+    <!--<link rel="stylesheet" href="public/style.css"/>-->
     <link rel="stylesheet" id="scheme"/>
 </head>
 <body>
