--- a/index.html
+++ b/index.html
@@ -1,25 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,user-scalable=no">
-    <meta name="keywords" content="Петербург, план, метро">
-    <meta name="description" content="План метро Санкт-Петербурга">
-    <meta name="author" content="Anton Veselyev">
-    <meta name="theme-color" content="#003688">
-    <title>Metro</title>
-    <!--<link href='https://fonts.googleapis.com/css?family=Cambay:400,700' rel='stylesheet' type='text/css'>-->
-    <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/Spb_metro_logo.svg/293px-Spb_metro_logo.svg.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css">
-    <link rel="stylesheet" href="https://cdn.rawgit.com/MohammadYounes/AlertifyJS/master/build/css/alertify.min.css">
-    <link rel="stylesheet" href="https://cdn.rawgit.com/MohammadYounes/AlertifyJS/master/build/css/themes/default.min.css">
-    <!--<link rel="stylesheet" href="css/fonts.css"/>-->
-    <!--<link rel="stylesheet" href="public/style.css"/>-->
-    <link rel="stylesheet" id="scheme">
-</head>
-<body>
-
-<div id="map-container">
-
-<script type="text/javascript" src="public/vendor.js?ab8f6652fe2e83d3116d"></script><script type="text/javascript" src="public/app.js?ab8f6652fe2e83d3116d"></script></body>
-</html>
+<!DOCTYPE html><html><head lang="en"><meta charset="UTF-8"><meta name="viewport" content="width=device-width,user-scalable=no"><meta name="keywords" content="Петербург, план, метро"><meta name="description" content="План метро Санкт-Петербурга"><meta name="author" content="Anton Veselyev"><meta name="theme-color" content="#003688"><title>Metro</title><link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/Spb_metro_logo.svg/293px-Spb_metro_logo.svg.png"><link rel="stylesheet" id="scheme"></head><body><div id="map-container"><script type="text/javascript" src="public/vendor.js?46e42ce88828cd21a6ee"></script><script type="text/javascript" src="public/app.js?46e42ce88828cd21a6ee"></script></body></html>
