--- a/src/template.html
+++ b/src/template.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#003688">
     <title>Metro</title>
     <!--<link href='https://fonts.googleapis.com/css?family=Cambay:400,700' rel='stylesheet' type='text/css'>-->
-    <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/Spb_metro_logo.svg/293px-Spb_metro_logo.svg.png" />
+    <link id="favicon" rel="icon" type="image/png" />
 </head>
 <body>
 
